# humver

./: .gitignore  README.md
rs/: Cargo.toml  README.md
rs/src/: errors.rs  lib.rs
ts/: README.md  deno.json
ts/scripts/: build_npm.ts
ts/src/: version.ts
ts/tests/: version.test.ts
