[package]
name = "humver"
version = "0.1.0"
edition = "2024"
description = "Semantic Human Versioning"
readme = "README.md"
homepage = "https://github.com/jacobhaap/humver/tree/main/rs"
repository = "https://gitlab.com/jacobhaap/humver"
license = "MIT"
keywords = ["human", "version", "semver"]

[dependencies]
chrono = "0.4.44"
serde = { version = "1.0.228", optional = true, features = ["derive"] }

[features]
serde = ["dep:serde"]